fixed layout bugs

--- a/app/components/Common/Header/index.module.css
+++ b/app/components/Common/Header/index.module.css
@@ -1,6 +1,9 @@
 .container {
-  display: flex;
-  flex-direction: column;
+  background-color: rgb(217, 248, 238);
+  position: sticky;
+  top: 0;
+  margin: 0 -20px;
+  padding: 8px 10px;
 }
 
 .header {
